age gap fix

--- a/src/app/shared/components/age-gap-banner/age-gap-banner.component.scss
+++ b/src/app/shared/components/age-gap-banner/age-gap-banner.component.scss
@@ -107,7 +107,7 @@
       }
     }
 
-    .description p {
+    .description {
       font-size: 23px;
       font-weight: 500;
       line-height: 34px;
